fixing the damn on-screen keyboard on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap');
 @import "tailwindcss";
 @plugin "@tailwindcss/typography";
+
 @plugin "daisyui" {
   themes: all;
 }
@@ -10,6 +11,17 @@
 .custom-scrollbar {
   scrollbar-width: thin;
 }
+
+html,
+body {
+  overscroll-behavior: none;
+  overflow: hidden;
+  height: 100%;
+  overflow: hidden;
+  touch-action: none;
+}
+
+
 
 @theme {
   --font-lato: "Lato", sans-serif;
